--- a/index.html
+++ b/index.html
@@ -74,9 +74,9 @@
         // 1. "FO" BAZ DONE NOU AN
         // Lis fim popilè yo
         const popularMovies = [
-            { title: 'Inception', posterUrl: 'images/poster-inception.jpg' },
-            { title: 'The Matrix', posterUrl: 'images/poster-matrix.jpg' },
-            { title: 'Interstellar', posterUrl: 'images/poster-interstellar.jpg' }
+            { title: 'Inception', posterUrl: 'images/fim1.png' },
+            { title: 'The Matrix', posterUrl: 'images/fim2.png' },
+            { title: 'Interstellar', posterUrl: 'images/fim3.png' }
             // Ajoute lòt fim popilè isit la...
         ];
         
