--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         // 1. "FO" BAZ DONE NOU AN
         // Lis fim popilè yo
         const popularMovies = [
-            { title: 'Inception', posterUrl: 'images/fim1.png' },
+            { title: 'Inception', posterUrl: 'images/poster-inception.JPEG' },
             { title: 'The Matrix', posterUrl: 'images/fim2.png' },
             { title: 'Interstellar', posterUrl: 'images/fim3.png' }
             // Ajoute lòt fim popilè isit la...
