--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     </style>
 </head>
 <body>
-
+<img src="images/poster-inception.jpg" alt="Tès Imaj" width="200">
     <header class="navbar" id="navbar">
         <a href="#" class="logo">FILMS</a>
         <nav class="nav-links">
