--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Booming Films - Akèy</title>
-    <link rel="manifest" href="manifest.json"> <style>
+    <link rel="manifest" href="manifest.json"> 
+    <style>
         /* Stil Jeneral ak Tèm Nwa */
         body {
             background-color: #141414; /* Nwa Netflix la */
@@ -156,11 +157,15 @@
             }
         };
 
-        const popularMovies = [
-            { title: 'Inception', posterUrl: 'images/poster-inception.jpg' },
-            { title: 'The Matrix', posterUrl: 'images/poster-matrix.jpg' },
-            { title: 'Interstellar', posterUrl: 'images/poster-interstellar.jpg' }
-        ];
+      // Anndan <script> nan index.html, ranplase lis fim yo ak sa SÈLMAN:
+const popularMovies = [
+    { title: 'Fim Tès', posterUrl: 'images/test.jpg' },
+    { title: 'Fim Tès', posterUrl: 'images/test.jpg' },
+    { title: 'Fim Tès', posterUrl: 'images/test.jpg' }
+];
+
+ // N ap kite sa vid pou tès la
+        
         
         const actionMovies = [
             { title: 'The Dark Knight', posterUrl: 'images/poster-dark-knight.jpg' },
