--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
     </style>
 </head>
 <body>
-<img src="/poster-inception.jng" alt="Dezyèm Tès" width="200">
+<img src="/poster-inception.jpg" alt="Dezyèm Tès" width="200">
 
     <header class="navbar" id="navbar">
         <a href="#" class="logo">FILMS</a>
